# mcprot

./: Cargo.toml  LICENSE  README.md
src/: consts.rs  errors.rs  lib.rs
src/types/: angle.rs  bytebuffer.rs  mod.rs  packet.rs  position.rs  varint.rs  varlong.rs
src/versions/: mod.rs
src/versions/common/: chat_mode.rs  connstate.rs  identifier.rs  main_hand.rs  mod.rs  packet.rs  packet_decoder.rs  packet_encoder.rs  rpp_result.rs  status.rs  text.rs
src/versions/v1_21_1/: animation.rs  entities.rs  mod.rs
src/versions/v1_21_1/client/: mod.rs
src/versions/v1_21_1/client/config/: add_resourcepack.rs  c_keep_alive.rs  c_known_packs.rs  c_pl_msg.rs  cookie_request.rs  custom_report_details.rs  disconnect.rs  feature_flags.rs  finish_config.rs  mod.rs  ping.rs  registry_data.rs  remove_resourcepack.rs  reset_chat.rs  server_links.rs  store_cookie.rs  transfer.rs  update_tags.rs
src/versions/v1_21_1/client/login/: disconnect.rs  enc_request.rs  login_success.rs  mod.rs  set_compression.rs
src/versions/v1_21_1/client/play/: entity_animation.rs  mod.rs  spawn_entity.rs  spawn_xp_orb.rs
src/versions/v1_21_1/client/status/: mod.rs  pong_response.rs  status_response.rs
src/versions/v1_21_1/server/: mod.rs
src/versions/v1_21_1/server/config/: acknowledge_finish_config.rs  client_info.rs  cookie_response.rs  mod.rs  pong.rs  resource_pack_response.rs  s_keep_alive.rs  s_known_packs.rs  s_pl_msg.rs
src/versions/v1_21_1/server/handshake/: mod.rs
src/versions/v1_21_1/server/login/: cookie_response.rs  enc_response.rs  login_acknowledged.rs  login_pl_response.rs  (+2 more)
(+6 files in other folders)
