[package]
name = "mcprot"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.2"
color-eyre = "0.6.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
uuid = { version = "1.10.0", features = ["serde", "v4"] }


[features]
default = ["1_21_1"]
1_21_1 = []
