[package]
name = "mcprot"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.2"
color-eyre = "0.6.3"
crab_nbt = "0.2.4"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_plain = "1.0.2"
thiserror = "1.0.64"
uuid = { version = "1.10.0", features = ["serde", "v4"] }


[features]
default = ["1_21_1"]
1_21_1 = []
